deps/crates/vendor/pin-project-lite/tests/ui/pin_project/negative_impls_stable.stderr
error[E0119]: conflicting implementations of trait `Unpin` for type `Foo<MyPhantomPinned, ()>`
  --> tests/ui/pin_project/negative_impls_stable.rs:5:1
   |
 5 | / pin_project_lite::pin_project! {
 6 | |     struct Foo<Pinned, Unpinned> {
 7 | |         #[pin]
 8 | |         pinned: Pinned,
...  |
11 | | }
   | |_^ conflicting implementation for `Foo<MyPhantomPinned, ()>`
...
15 |   impl Unpin for Foo<MyPhantomPinned, ()> {}
   |   --------------------------------------- first implementation here
   |
   = note: this error originates in the macro `$crate::__pin_project_make_unpin_impl` which comes from the expansion of the macro `pin_project_lite::pin_project` (in Nightly builds, run with -Z macro-backtrace for more info)
